user 아웃어댑터 테스트 작성 및 리팩토링 및 다중 로그인 비즈니스 코드 리팩토링